# cmm-ai-automation

./: .copier-answers.yml  .env.example  .gitignore  .linkml-lint.yaml  .pre-commit-config.yaml  .yamllint.yaml  .~lock.strains_enriched_ordered.tsv#  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_LOG.md  SKILL.md  _typos.toml  ai.just  config.public.mk  index.html  justfile  mkdocs.yml  prefix_map.json  project.justfile  pyproject.toml  sitemap.xml  strains.tsv  strains_enriched.tsv  strains_merged.tsv
.github/: ai-controllers.json
.github/workflows/: claude-issue-triage.yml  claude.yml  codeql.yml  deploy-docs.yaml  main.yaml  pypi-publish.yaml  test_pages_build.yaml
CMM-AI_Analysis/04_code_analysis/: index.html
CMM-AI_Analysis/05_api_and_llm/: index.html
CMM-AI_Analysis/07_recommendations/: index.html
CMM-AI_Analysis/08_appendices/: index.html
SETUP_LOG/: index.html
about/: index.html
architecture/: index.html
config/: kgx_merge_config.yaml  kgx_validation_config.yaml
data/: bacdive_meta.property_schemas.json  bacdive_shape_report.txt  curie-validation-20260108.txt  edge_patterns.tsv  enrichment.duckdb  kg-microbe-edge-patterns-20260108.tsv  kg-microbe-predicate-analysis-20260108.txt  kg-microbe-prefix-stats-20260108.txt  kg-microbe-prefixes-20260108.txt  media_grounding_mappings.tsv  mediadive_ingredients.json  mediadive_media.json  mediadive_solutions.json  mediadive_stats.json  mongodb_collections_report.tsv  ncbi_taxon_1286640.xml  ncbi_taxon_1286640_linkouts.xml  nodes-column-usage-20260108.txt  predicate-validation-20260108.txt  strains-readme.md  togomedium-api.yaml
data/mediadive-schemas/: README.md  ingredient_details.json  ingredients.json  media.json  medium_composition.json  medium_strains.json  solution_details.json  solutions.json  stats.json  strains.json
data/private/: README.md
delaney_kgx_compliance/: index.html
docs/: 2026-01-06_bacdive_kgx_implementation.md  CMM_KG_ML_Pipeline_Overview.md  SETUP_LOG.md  about.md  architecture.md  atcc_1306_verification.md  bacdive_field_name_issue.md  bacdive_kgx_pipeline.md  bacdive_mongodb.md  bacdive_mongodb_reconciliation_queries.md  best-practices.md  best_practices_strain_data_curation.md  cmm_media_modeling_and_disambiguation_plan.md  cmm_vs_kg_microbe.md  culture_collection_search_implementation.md  curie_prefix_strategy.md  databases.md  delaney_kgx_compliance.md  delaney_media_kgx_schema.md  delaney_schema_alignment.md  dsmz_88_verification.md  grape-graph-embeddings-summary.md  growth_media_scrutiny.md  hypho_mp_grounding_and_next_steps.md  index.md  just-targets.md  kg-microbe-regeneration-guide.md  kg-microbe-technical-debt.md  kg_microbe_build_system.md  kg_microbe_nodes_analysis.md  kg_microbe_risks.md  kg_microbe_verification_2026-01-08.md  kgx-ecosystem.md  media_grounding_pipeline.md  medium_grounding_web_retrieval_notes.md  medium_relationships_J1221_M511_GRMD510.md  mixed_id_analysis.md  parked-just-targets.just  pfas-community-modeling.md  pipeline.md  (+8 more)
docs/CMM-AI_Analysis/: 00_index.md  01_project_context.md  02_data_model_analysis.md  03_data_quality_issues.md  04_code_analysis.md  05_api_and_llm.md  06_setup_guide.md  07_recommendations.md  08_appendices.md
docs/plans/: sheet-veracity-framework.md
docs/schema/: cmm_ai_automation.yaml
docs/sessions/: 2026-01-06_bacdive_kgx_implementation.md
dsmz_88_verification/: index.html
elements/: index.html
elements/Boolean/: index.html
elements/CMMDatabase/: index.html
elements/ConcentrationUnit/: index.html
elements/ConflictResolution/: index.html
elements/Curie/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/Float/: index.html
elements/GramStain/: index.html
elements/GrowthMedium/: index.html
elements/GrowthPreference/: index.html
elements/Ingredient/: index.html
elements/IngredientComponent/: index.html
elements/IngredientRole/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
examples/: README.md
just-targets/: index.html
kg-microbe-regeneration-guide/: index.html
kg_microbe_build_system/: index.html
kg_microbe_nodes_analysis/: index.html
kg_microbe_risks/: index.html
media_grounding_pipeline/: index.html
notebooks/: README.md  example.ipynb  kgx-exercise.ipynb  kgx-exercise_edges.tsv  my_nodes.tsv_nodes.tsv
old/: culture_collection_report.tsv  culture_collection_report_enriched.tsv  strains_enriched_bacdive_diff.tsv  strains_enriched_biosafety_fixed.tsv  strains_enriched_corrected.tsv  strains_enriched_final.tsv  strains_enriched_ordered.tsv  type_strain_table.tsv
pfas-community-modeling/: index.html
pipeline/: index.html
recipe_verification_report/: index.html
roadmap/: index.html
schema/: cmm_ai_automation.yaml
scripts/: extract_bacdive_strain_medium_edges.js
search/: search_index.json
session-notes-2025-12-16/: index.html
species_search_with_synonyms/: index.html
tests/: __init__.py  conftest.py  test_analyze_kgx_patterns.py  test_cas.py  test_chebi.py  test_chemicals_kgx_from_curies.py  test_clients_mediadive_mongodb.py  test_clients_ols.py  test_data.py  test_delaney_kgx_validation.py  test_download_sheets.py  test_edge_patterns_by_source.py  test_edge_patterns_merged.py  test_enrich_to_store.py  test_enrichment_store.py  test_export_enriched_strains_kgx.py  test_export_mediadive_kgx.py  test_export_scoped_strains_kgx.py  test_export_strains_kgx.py  test_extract_edge_patterns.py  test_growth_preference_transform.py  test_kgx_bridge.py  test_mediadive.py  test_mediadive_mongodb.py  test_neo4j_scripts.py  test_node_normalization.py  test_ols.py  test_pubchem.py  test_reconcile.py  test_reconcile_agent.py  test_scripts_standardize_kgx.py  test_scripts_validate_kgx.py  test_strains_consolidation.py  test_strains_export.py  test_strains_inference.py  test_strains_kgx_from_curies.py  test_strains_models.py  test_strains_ncbi.py  test_strains_parsing.py  test_transform_bacdive_source.py  (+6 more)
togomedium/: index.html
(+1414 files in other folders)
