[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "cmm_ai_automation"
description = "AI-assisted automation for Critical Mineral Metabolism data curation"
authors = [
  {name = "Mark Miller", email = "MAM@lbl.gov"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.9.4",
  "gspread >=6.0.0",
  "google-auth >=2.0.0",
  "google-auth-oauthlib >=1.0.0",
  "pandas >=2.0.0",
  "click >=8.0.0",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-pymdownx-material-extras>=2.5.6",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
]
qa = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "deptry>=0.21.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=4.0.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
download-sheets = "cmm_ai_automation.scripts.download_sheets:main"

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation_pydantic.py",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation_pydantic.py",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation.py",
]

# Ref.: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  "project/*",
  "src/cmm_ai_automation/datamodel/*",
  "src/cmm_ai_automation/_version.py",
]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "UP",     # pyupgrade
  "ARG",    # flake8-unused-arguments
  "SIM",    # flake8-simplify
  "TCH",    # flake8-type-checking
  "PTH",    # flake8-use-pathlib
  "RUF",    # Ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cmm_ai_automation"]

# Ref.: https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
exclude = [
  "project/",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation\\.py$",
  "src/cmm_ai_automation/datamodel/cmm_ai_automation_pydantic\\.py$",
]

[[tool.mypy.overrides]]
module = [
  "gspread.*",
  "linkml_runtime.*",
]
ignore_missing_imports = true

# Ref.: https://deptry.com/configuration/
[tool.deptry]
exclude = [
  "project",
  "tests",
]
ignore = [
  "DEP002",  # transitive dependencies (common with linkml)
]

# Ref.: https://pytest-cov.readthedocs.io/
[tool.coverage.run]
source = ["src/cmm_ai_automation"]
omit = [
  "src/cmm_ai_automation/datamodel/*",
  "src/cmm_ai_automation/_version.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
fail_under = 80
